<resources>
    <string name="app_name">Bocado Rural</string>
    <string name="textSolicitudTrabajo">Solicitud para trabajar con nosotros.</string>
    <string name="textNombreyApellidos">Nombre y apellidos.</string>
    <string name="textNombreyApellidosManager">Nombre y apellidos. (Encargado)</string>
    <string name="textEmail">Email.</string>
    <string name="textTelefono">Telefono.</string>
    <string name="textDirección">Dirección.</string>
    <string name="textExperiencia">Experiencia.</string>
    <string name="textMasInfo">Más información...</string>
    <string name="textNombreRestaurante">Nombre del Restaurante.</string>
    <string name="textEstiloComida">Estilo de comida.</string>
    <string name="text_tipo_de_comida">Estilo de comida</string>
    <string name="gifTitulo">GifTitulo</string>
    <string name="gifLoading">GifLoading</string>
    <string name="gifBusiness">GifLoading</string>
    <string name="textBienvenida">Iniciar Sesión</string>
    <string name="hintEmail">Email</string>
    <string name="hintContraseña">Contraseña</string>
    <string name="textPreguntaContraseña">¿Has olvidado la contraseña?</string>
    <string name="textPreguntaCrearCuentaNueva">¿No tienes cuenta todavía?</string>
    <string name="textInicio">Inicio</string>
    <string name="lineaSeparacion">___________________</string>
    <string name="textCrearCuentaNueva">Crear Nueva Cuenta</string>
    <string name="textSolicitud">Te gustaria trabajar con nosotros?</string>
    <string name="hintNombreCompleto">Nombre completo</string>
    <string name="hintNombreDeUsuario">Nombre de usuario</string>
    <string name="hintContraseñaParametros">Contraseña (mín. 8 caracteres, 3 numericos)</string>
    <string name="repitaContrasenia">Repita su contraseña</string>
    <string name="hintContraseñaRepetir">Repite la Contraseña</string>
    <string name="hintNacimientoParametros">Nacimiento (MM/DD/YYYY)</string>
    <string name="hintMovil">Movil</string>
    <string name="textPregunta">¿Lejos de la ciudad? ¡No hay problema! </string>
    <string name="textCrearCuenta">Crear Cuenta</string>
    <string name="textContraseñaOlvidada">Recupera acceso en un tan solo un instante.</string>
    <string name="new_password" />
    <string name="confirm_password" />
    <string name="reset_password" />

    <string name="textmenuRestauranteCarta">Carta</string>
    <string name="textmenuRestaurantePedidos">Pedidos</string>
    <string name="textmenuRestauranteAñadirCarta">Añadir Carta</string>
    <string name="textmenuRestauranteAñadiraCarta">AÑADIR A LA CARTA</string>
    <string name="textmenuRestauranteCerrarSesion">Cerrar Sesión</string>
    <string name="textmenuRestauranteTitulo">Menu Restaurantes</string>
    <string name="textAñadirCarta">Añadir Carta</string>
    <string name="textRestauranteEntrantes">Entrantes</string>
    <string name="textRestauranteTapas">Tapas</string>
    <string name="textRestauranteProducto">Producto</string>
    <string name="textRestaurantePrecio">Precio </string>
    <string name="textRestauranteBebidas">Bebidas </string>

    <string name="textIDPedido">ID del pedido</string>
    <string name="textDireccion_Restaurante">Direccion del restaurante</string>
    <string name="textDireccion_Cliente">Direccion del cliente</string>
    <string name="textPrecio_Total">Precio total </string>
    <string name="textCliente_Username">Nombre del cliente </string>



    <string-array name="tipos_de_comida">
        <item>Estilo de Comida</item>
        <item>Española</item>
        <item>Americana</item>
        <item>Italiana</item>
        <item>Asiatica</item>
        <item>Turca</item>
        <item>India</item>
        <item>Mexicana</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Restaurantes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="back">Atrás</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_image" />
    <string name="placeholder_restaurant_name" />
    <string name="textCreacionPedido">              Creacion del Pedido </string>
    <string name="textTomaPedido">              Hora de Toma del Pedido</string>
    <string name="textPedidoEntregado">              Hora Entrega del Pedido</string>
    />
</resources>