<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/ic_person"
            android:title= "Perfil" />

        <item
            android:id="@+id/encargosDisponiblesFragment"
            android:icon="@drawable/ic_restaurante"
            android:title= "Pedidos Disponibles" />
        <item
            android:id="@+id/encargosEscogidosragment"
            android:icon="@drawable/ic_send"
            android:title= "Pedidos Adjudicados" />
        <item
            android:id="@+id/anyadirCartaFragment"
            android:icon="@drawable/ic_shop"
            android:title= "Añadir Carta" />
        <item
            android:id="@+id/pedidosFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title= "Pedidos" />
    </group>
</menu>