<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:id="@+id/cardView"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/IMAGEpedidos"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:contentDescription=""
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/comida" />

        <!-- Title, secondary and supporting text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="ID del Pedido: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtProducto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textRestauranteProducto"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Additional fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="Direccion del restaurante: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtDireccion_Restaurante"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/textDireccion_Restaurante"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Direccion del cliente: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtDireccion_Cliente"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textDireccion_Cliente"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Precio del pedido: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtPrecio_Total"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textPrecio_Total"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre cliente: "
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtCliente_Username"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textCliente_Username"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="start"
                android:text="Creacion del Pedido:"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtCreacionPedido"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/textCreacionPedido"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTomaPedido"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="start"
                android:text="Toma del Pedido:"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtTomaPedido"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/textTomaPedido"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPedidoEntregado"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="start"
                android:text="Pedido Entregado:"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtPedidoEntregado"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:text="@string/textPedidoEntregado"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
