<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trabajo_final_grupo_11_dam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.trabajo_final_grupo_11_dam.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.trabajo_final_grupo_11_dam.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.PerfilFragment"
        android:label="fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/encargosDisponiblesFragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.EncargosDisponiblesFragment"
        android:label="fragment_encargos_disponibles"
        tools:layout="@layout/fragment_encargos_disponibles" />
    <fragment
        android:id="@+id/cartaFragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.CartaFragment"
        android:label="fragment_carta"
        tools:layout="@layout/fragment_carta" />
    <fragment
        android:id="@+id/anyadirCartaFragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.anyadirCartaFragment"
        android:label="fragment_anyadir_carta"
        tools:layout="@layout/fragment_anyadir_carta" />
    <fragment
        android:id="@+id/pedidosFragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.PedidosFragment"
        android:label="fragment_pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
        android:id="@+id/encargosEscogidosragment"
        android:name="com.example.trabajo_final_grupo_11_dam.Fragment.EncargosEscogidosragment"
        android:label="fragment_encargos_escogidosragment"
        tools:layout="@layout/fragment_encargos_escogidosragment" />
</navigation>