<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/t"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuRestaurantesActivity">

    <EditText
        android:id="@+id/edt_precio8"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio7"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/edt_producto8"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio8"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto7"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_precio7"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio6" />

    <EditText
        android:id="@+id/edt_precio6"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio5" />

    <EditText
        android:id="@+id/edt_producto7"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio7"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto6" />

    <EditText
        android:id="@+id/edt_producto6"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio6"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto5" />

    <EditText
        android:id="@+id/edt_precio5"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/edt_producto5"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrantes2" />

    <EditText
        android:id="@+id/edt_producto5"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrantes2" />

    <TextView
        android:id="@+id/tv_entrantes2"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/textRestauranteTapas"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto4" />

    <EditText
        android:id="@+id/edt_precio4"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_precio5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_precio3"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio2" />

    <EditText
        android:id="@+id/edt_producto3"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio3"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto2" />

    <EditText
        android:id="@+id/edt_precio2"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio1" />

    <EditText
        android:id="@+id/edt_producto2"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio2"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto1" />

    <EditText
        android:id="@+id/edt_precio1"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/textRestaurantePrecio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_menu_restaurante" />

    <TextView
        android:id="@+id/tv_titulo_menu_restaurante"
        android:layout_width="330dp"
        android:layout_height="33dp"
        android:text="@string/textmenuRestauranteTitulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/tv_añadir_carta"
        android:layout_width="138dp"
        android:layout_height="32dp"
        android:text="@string/textAñadirCarta"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/tv_entrantes"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:text="@string/textRestauranteEntrantes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_añadir_carta"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/edt_producto1"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_producto2"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio1"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entrantes" />

    <EditText
        android:id="@+id/edt_producto4"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/textRestauranteProducto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/edt_precio4"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_producto3" />

</androidx.constraintlayout.widget.ConstraintLayout>